fix: make sure the Navigator toggle also animates, in sync with the nav toggle icon. Fix issues with hovering icon on Safari

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -70,4 +70,4 @@ $card-horizontal-spacing-small: $card-horizontal-spacing / 2;
 $small-viewport-content-padding: 20px !default;
 
 // AdjustableSidebar
-$adjustable-sidebar-hide-transition-duration: 0.5s;
+$adjustable-sidebar-hide-transition-duration: 0.3s;
